--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,14 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.4
   dio: ^5.6.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
