--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: millima
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   bloc: ^8.1.4
@@ -15,6 +15,11 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
   shared_preferences: ^2.3.2
+
+  cupertino_icons: ^1.0.8
+  google_sign_in: ^6.2.1
+  firebase_core: ^2.24.2
+  flutter_facebook_auth: ^7.0.1
 
 dev_dependencies:
   flutter_test:
